--- a/views/index.jade
+++ b/views/index.jade
@@ -6,4 +6,14 @@ html
     link(rel='stylesheet', href='/css/style.css')
   body
     h1= title
-    p Welcome to #{title}
+    if username
+      p Welcome, #{username}.
+    else
+      if error
+        p= error
+      else
+        p What's your name?
+      form(method='post', action='/')
+        input(type='text', name='username')
+        input(type='password', name='password')
+        input(type='submit', value='OK')
