--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,9 @@ html
     h1= title
     if username
       p Welcome, #{username}.
+      form(method='post', action='/')
+        input(type='hidden', name='logout', value='1')
+        input(type='submit', value='Logout')
     else
       if error
         p= error
@@ -16,4 +19,4 @@ html
       form(method='post', action='/')
         input(type='text', name='username')
         input(type='password', name='password')
-        input(type='submit', value='OK')
+        input(type='submit', value='Login')
