--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+p.good {
+  background: lightgreen;
+}
+
+p.error {
+  background: lightpink;
 }
