--- a/views/index.jade
+++ b/views/index.jade
@@ -1,36 +1,19 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    title= title
-    link(rel='stylesheet', href='/css/style.css')
-  body
-    h1= title
-    if message
-      p= message
-      p
-        a(href='/') Top page
-    else if username
-      form(method='post', action='/logout')
-        | User: #{username} | 
-        if password
-          a(href='/password') Password
-          |  | 
-        input(type='submit', value='Logout')
-      if links
-        p Links
-        ul
-          for link in links
-            li
-              a(href=link.href)= link.text
-    else
-      if error
-        p(class='error')= error
-      else
-        p Please login.
-      form(method='post', action='/login')
-        input(type='text', name='username', placeholder='Username')
-        br
-        input(type='password', name='password', placeholder='Password')
-        br
-        input(type='submit', value='Login')
+include common
+
++common
+  if message
+    p= message
+    +back
+  if username
+    form(method='post', action='/logout')
+      | User: #{username} | 
+      if password
+        a(href='/password') Password
+        |  | 
+      input(type='submit', value='Logout')
+  if links
+    p Links
+    ul
+      for link in links
+        li
+          a(href=link.href)= link.text
