--- a/views/password.jade
+++ b/views/password.jade
@@ -1,26 +1,19 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    title= title
-    link(rel='stylesheet', href='/css/style.css')
-  body
-    h1= title
-    if message
-      p(class='good')= message
-    if error
-      p(class='error')= error
-    form(method='post', action='/password')
-      label Current password
-      br
-      input(type='password', name='current')
-      br
-      label New password
-      br
-      input(type='password', name='new1')
-      br
-      input(type='password', name='new2')
-      br
-      input(type='submit', value='Change')
-    p
-      a(href='/') Top page
+if !title
+  - title = 'Change Password'
+
+include common
+
++common
+  form(method='post', action='/password')
+    label Current password
+    br
+    input(type='password', name='current')
+    br
+    label New password
+    br
+    input(type='password', name='new1')
+    br
+    input(type='password', name='new2')
+    br
+    input(type='submit', value='Change')
+  +back
