--- a/views/password.jade
+++ b/views/password.jade
@@ -1,9 +1,9 @@
-if !title
+extends base
+
+block title
   - title = 'Change Password'
 
-include common
-
-+common
+block content
   form(method='post', action='/password')
     label Current password
     br
@@ -16,4 +16,6 @@ include common
     input(type='password', name='new2')
     br
     input(type='submit', value='Change')
+
+block back
   +back
