refactor app.js

--- a/views/base.jade
+++ b/views/base.jade
@@ -12,9 +12,9 @@ mixin navi
 
 mixin message(alt)
   if good
-    p(class='good')= good
+    p.good= good
   else if error
-    p(class='error')= error
+    p.error= error
   else if alt
     p= alt
 
@@ -29,7 +29,6 @@ html
     title= title
     block styles
       link(rel='stylesheet', href='/css/style.css')
-    block scripts
   body
     block header
       h1= title
@@ -40,3 +39,4 @@ html
     block content
     block back
     block footer
+    block scripts
